--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,21 @@ cmake_minimum_required(VERSION 3.28)
 
 project(MinimalPluginTemplate VERSION 0.0.1)
 
+#This is temporarily needed due to a bug in Xcode 15:
+if (CMAKE_CXX_COMPILER_ID MATCHES "AppleClang")
+    if (NOT CMAKE_CXX_COMPILER_VERSION VERSION_LESS "15.0")
+        add_compile_definitions(JUCE_SILENCE_XCODE_15_LINKER_WARNING=1)
+        set(CMAKE_EXE_LINKER_FLAGS "-Wl,-ld_classic" CACHE INTERNAL "")
+    endif ()
+endif ()
+
 set (BaseTargetName MidiPredict)
 
 #----------------------------------------------------------------------------
 # From top-level:
+
+#First, we'll add the CMake folder, incase we'll need to find_package later:
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake")
 
 #Compile commands, useful for some IDEs like VS-Code
 set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
